update readme file

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Umit8098.github.io/React-Project-Router",
   "name": "react-project-router",
   "version": "0.1.0",
   "private": true,
